examples/service.clusterIP.yaml
apiVersion: v1
kind: Service
metadata:
 name: demowebapp-clusterip
spec:
 type: ClusterIP
 selector:
    app: demowebapp
 ports:
  - name: "8080"
    port: 8080
    targetPort: 80
