examples/service.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
 name: demowebapp-loadbalancer
spec:
 type: LoadBalancer
 selector:
    app: demowebapp
 ports:
  - name: "80"
    port: 80
    targetPort: 80
