examples/host-rule-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: host-rule-ingress
spec:
  rules:
  - host: demo.winjigo.com
    http:
      paths:
      - backend:
          serviceName: demowebapp-clusterip
          servicePort: 8080
